--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello Test</title>
   </head>
   <body>
-      <h1> Name <h1>
+      <h1> Name I am thrilled about this course <h1>
   </body>
 </html>
